--- a/lx2k_additions.config
+++ b/lx2k_additions.config
@@ -79,6 +79,14 @@ CONFIG_NF_NAT_FTP=y
 CONFIG_NF_CONNTRACK_FTP=y
 CONFIG_NF_NAT_TFTP=y
 CONFIG_NF_CONNTRACK_TFTP=y
+CONFIG_NF_TABLES=y
+CONFIG_NF_TABLES_INET=y
+CONFIG_NF_TABLES_IPV4=y
+CONFIG_NF_NAT_IPV4=y
+CONFIG_NF_TABLES_IPV6=y
+CONFIG_NF_NAT_IPV6=y
+CONFIG_NF_TABLES_NETDEV=y
+CONFIG_NF_TABLES_ARP=y
 CONFIG_VXLAN=y
 CONFIG_DUMMY=y
 CONFIG_IPVLAN=y
