--- a/kea-dhcp4.conf
+++ b/kea-dhcp4.conf
@@ -1,4 +1,4 @@
-// This is a basic configuration for the Kea DHCPv4 server. Subnet declarations
+/ This is a basic configuration for the Kea DHCPv4 server. Subnet declarations
 // are mostly commented out and no interfaces are listed. Therefore, the servers
 // will not listen or respond to any queries.
 // The basic configuration must be extended to specify interfaces on which
@@ -31,7 +31,7 @@
         // See section 8.2.4 for more details. You probably want to add just
         // interface name (e.g. "eth0" or specific IPv4 address on that
         // interface name (e.g. "eth0/192.0.2.1").
-        "interfaces": [ "eth0", "eth1, "eth2", "eth3", "eth4", "eth6", "eth7", "eth8", "eth9", "eth11" ]
+        "interfaces": [ "eth0", "eth1", "eth2", "eth3", "eth4", "eth6", "eth7", "eth8", "eth9", "eth11" ]
 
         // Kea DHCPv4 server by default listens using raw sockets. This ensures
         // all packets, including those sent by directly connected clients
@@ -331,7 +331,7 @@
                 // else.
                 {
                     "hw-address": "1a:1b:1c:1d:1e:1f",
-                    "ip-address": "192.1.168.201"
+                    "ip-address": "192.168.1.201"
                 },
 
                 // This is a reservation for a specific client-id. It also shows
@@ -460,5 +460,4 @@
     }
   ]
 }
-
-
+}
